Rust/rust-tui-app/target/debug/build/eyre-6f94eca429f68cd1/stderr
error[E0554]: `#![feature]` may not be used on the stable release channel
 --> /Users/kishore/Projects/Rust/rust-tui-app/target/debug/build/eyre-6f94eca429f68cd1/out/probe.rs:2:16
  |
2 |     #![feature(backtrace)]
  |                ^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0554`.
